<resources>
    <string name="app_name">e-Eye</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">ADD</string>
    <string name="subscription">Subscription</string>
    <string name="title">Title :</string>
    <string name="delim">:</string>
    <string name="creator">Created by Zokirbekov</string>
    <string name="name">Name</string>
    <string name="surame">Surame</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="text_new">New</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="message">Message</string>
    <string name="do_you_exit">Do you want to exit?</string>

</resources>
