<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@color/colorWhite"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/camera" />

        </android.support.design.widget.CollapsingToolbarLayout>


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    android:text="@string/title"/>

                <EditText
                    android:id="@+id/editText_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="16dp"
                    android:inputType="textCapWords"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"/>

            </LinearLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp"
                android:elevation="16dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/subscription"
                    app:hintTextAppearance="@style/edit_text"
                    android:textColorHint="@color/colorLightBlue"
                    android:layout_margin="8dp">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/editText_subscription"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|start"/>

                </android.support.design.widget.TextInputLayout>

            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_gradient_primary_color"
                android:textColor="@color/colorWhite"
                android:text="@string/add"
                android:textSize="24sp"
                android:layout_margin="16dp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>